# django_kourse_work

./: .env  .env.example  .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
mailing/management/commands/: init_groups.py  send_mailings.py
mailing/migrations/: 0001_initial.py  0002_initial.py
mailing/tamplates/mailing/: home.html
mailingv/: apps.py
tamplates/: base.html
tamplates/includes/: header.html
tamplates/mailing/: client_form.html  client_list.html  mailing_list.html  manager_mailing_list.html
templates/: base.html
templates/includes/: footer.html
templates/mailing/: client_confirm_delete.html  home.html  mailing_form.html  mailing_logs.html  message_confirm_delete.html  message_form.html  message_list.html  statistics.html  user_list.html
templates/users/: profile.html  profile_form.html  profile_update.html  register.html
users/: forms.py  managers.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tamplates/users/: login.html
