[tool.poetry]
name = "django_kourse_work"
version = "0.1.0"
description = "Сервис управления рассылками на Django"
authors = ["VanillaKach <4d4m5@mail.ru>"]
readme = "README.md"
packages = [
    { include = "mailing" },
    { include = "users" },
    { include = "config" }
]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^4.2"
psycopg2-binary = "^2.9"
python-dotenv = "^1.0"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^2023.10"
redis = "^4.5"
django-apscheduler = "^0.6.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0"
black = "^23.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
